--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -1,8 +1,8 @@
 extends layout/main.pug
 
 
-include ../blocks/sContent/_sContent.pug
-include ../blocks/sContact/_sContact.pug
+include ../blocks/sWatchSports/_sWatchSports.pug
+//- include ../blocks/sContact/_sContact.pug
 
 block variables
 	- let  mainPage= 'main-page' 
@@ -12,21 +12,7 @@ block title
 	- let  title= 'title'
 	title= title
 block pagecontent
-	//- +mob-mnu()
-	+header()
-	+top-nav()
-	
-	+topLine()
-	.container
-		.swiper-wrapper
-			.swiper-slide 1
-			.swiper-slide 2
-			.swiper-slide 3
-	+headerBlock()
-	+sForm()
-	+sContact()
-	+footer()
-      
+	+sWatchSports()
 
 
 
