--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -42,7 +42,10 @@ html(lang="ru")
 		//- 	}
 		meta(name="viewport", content="width=device-width,initial-scale=1.0,  shrink-to-fit=no")
 		link(type="image/ico", href='img/favicon.ico', rel='shortcut icon') 
-		<meta name="format-detection" content="telephone=no"> 
+		<meta name="format-detection" content="telephone=no">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
 		+allcss()
 	block variables
 	//- style.
@@ -52,7 +55,7 @@ html(lang="ru")
 		.main-wrapper
 			block pagecontent
 				h3 content
-		+modal()
-		+allcjs()
+		//- +modal()
+		//- +allcjs()
 		
 		
