--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -36,8 +36,8 @@ $output-bourbon-deprecation-warnings: false;
 @import "./node_modules/bootstrap/scss/containers";
 @import "./node_modules/bootstrap/scss/grid";
 // @import "./node_modules/bootstrap/scss/tables";
-@import "./node_modules/bootstrap/scss/forms";
-@import "./node_modules/bootstrap/scss/buttons";
+// @import "./node_modules/bootstrap/scss/forms";
+// @import "./node_modules/bootstrap/scss/buttons";
 // @import "./node_modules/bootstrap/scss/transitions";
 // @import "./node_modules/bootstrap/scss/dropdown";
 // @import "./node_modules/bootstrap/scss/button-group";
@@ -62,7 +62,7 @@ $output-bourbon-deprecation-warnings: false;
 // @import "./node_modules/bootstrap/scss/offcanvas";
 // @import "./node_modules/bootstrap/scss/placeholders";
 // Helpers
-@import "./node_modules/bootstrap/scss/helpers";
+// @import "./node_modules/bootstrap/scss/helpers";
 
 // Utilities
 @import "./node_modules/bootstrap/scss/utilities/api";
@@ -99,6 +99,6 @@ $output-bourbon-deprecation-warnings: false;
 // }
 @import "root";
 @import "base";
-@import '../pug/blocks/**/*.scss';
+@import '../pug/blocks/sWatchSports/sWatchSports.scss';
 @import "media"; // Всегда в конце
 
