--- a/sourse/pug/blocks/sWatchSports/_sWatchSports.scss
+++ b/sourse/pug/blocks/sWatchSports/_sWatchSports.scss
@@ -1,48 +1,47 @@
 // start .sWatchSports
 .sWatchSports {
+	--sPY: calc(10px +6vh);
 	min-height: 100vh;
 	// height: 900px;
-	--sPT: #{rem(77)};
-	--sPB: #{rem(68)};
+	--sPT: var(--sPY);
+	--sPB: var(--sPY);
 	--sTPB: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	padding-left: rem(22);
+	padding-right: rem(22);
+	@include media-breakpoint-up(sm) {
+		padding-left: rem(32);
+		padding-right: rem(32);
+	}
+	@include media-breakpoint-up(md) {
+		padding-left: rem(41);
+		padding-right: rem(41);
+	}
 	@include media-breakpoint-up(sm) {
 		// height: 1334px;
 	}
 	@include media-breakpoint-up(md) {
 		// height: 1024px;
-		--sPT: #{rem(55)};
-		--sPB: #{rem(40)};
+		// --sPT: #{rem(55)};
+		// --sPB: #{rem(40)};
 	}
 	@include media-breakpoint-up(xl) {
-		--sPT: #{rem(63)};
-		--sPB: #{rem(63)};
-	}
-	.section-title {
-		display: none;
+		// --sPT: #{rem(63)};
+		// --sPB: #{rem(63)};
 	}
 	picture {
 		img {
 			object-position: top;
 		}
 	}
-	&__content {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		align-items: center;
-		padding-left: rem(22);
-		padding-right: rem(22);
-		@include media-breakpoint-up(sm) {
-			padding-left: rem(32);
-			padding-right: rem(32);
-		}
-		@include media-breakpoint-up(md) {
-			padding-left: rem(41);
-			padding-right: rem(41);
-		}
-	}
+
 	&__logo {
 		text-align: center;
+		margin-bottom: var(--sPY);
+
 		img {
 			height: auto;
 			max-width: 40vw;
@@ -69,11 +68,11 @@
 			}
 			@include media-breakpoint-up(md) {
 				// margin-bottom: rem(77);
-				max-width: rem(700);
+				max-width: rem(650);
 			}
 			@include media-breakpoint-up(lg) {
 				// margin-bottom: rem(86);
-				max-width: rem(850);
+				max-width: rem(750);
 			}
 			@include media-breakpoint-up(xxl) {
 				max-width: rem(1055);
@@ -84,13 +83,15 @@
 		display: flex;
 		align-items: center;
 		max-width: 100%;
+		margin-top: calc(var(--sPY) * 0.5);
+
 		// margin-top: var(--bs-gutter-y);
 		@include media-breakpoint-up(xl) {
 			justify-content: center;
 		}
 		.sWatchSports__img-wrap {
 			min-width: rem(73);
-			text-align: left;
+			text-align: center;
 			@include media-breakpoint-up(sm) {
 				min-width: rem(103);
 			}
@@ -102,7 +103,7 @@
 				max-height: rem(67);
 				width: auto;
 				height: auto;
-				@include media-breakpoint-up(sm) {
+				@include media-breakpoint-up(xxl) {
 					max-width: rem(103);
 					max-height: rem(95);
 				}
@@ -117,11 +118,11 @@
 			text-transform: uppercase;
 			padding-left: rem(16);
 			@include media-breakpoint-up(sm) {
-				font-size: rem(34);
-				padding-left: rem(49);
-			}
-			@include media-breakpoint-up(xl) {
+				// padding-left: rem(49);
 				padding-left: rem(26);
+			}
+			@include media-breakpoint-up(xxl) {
+				font-size: rem(34);
 			}
 		}
 	}
@@ -132,16 +133,20 @@
 		margin-left: auto;
 		margin-right: auto;
 		max-width: 276px;
+
 		// --bs-gutter-y: #{rem(60)};
 		// margin-top: calc(-1 * var(--bs-gutter-y));
 		@include media-breakpoint-up(sm) {
-			max-width: 410px;
+			max-width: 340px;
 			// --bs-gutter-y: #{rem(45)};
 		}
 		@include media-breakpoint-up(xl) {
-			max-width: 1280px;
+			max-width: 900px;
 			flex-direction: row;
 			justify-content: space-between;
+		}
+		@include media-breakpoint-up(xxl) {
+			max-width: 1280px;
 		}
 	}
 	&__btn {
@@ -153,7 +158,11 @@
 		border-radius: 91px;
 		text-align: center;
 		box-shadow: 0px 0px 20px 4px #8edd04;
+		margin-top: var(--sPY);
 		@include media-breakpoint-up(sm) {
+			max-width: rem(450);
+		}
+		@include media-breakpoint-up(xxl) {
 			max-width: rem(555);
 			padding: rem(13.5);
 		}
@@ -173,7 +182,11 @@
 			line-height: calc(42 / 36);
 			color: #011c4d;
 			text-transform: uppercase;
-			@include media-breakpoint-up(sm) {
+			// @include media-breakpoint-up(sm) {
+			// 	padding: rem(19.5);
+			// 	font-size: rem(36);
+			// }
+			@include media-breakpoint-up(xxl) {
 				padding: rem(19.5);
 				font-size: rem(36);
 			}
