--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -39,7 +39,17 @@ html(lang="ru")
 				window.addEventListener('resize', () => { 
 				 w();
 				}, { passive: true });
-			}
+			};
+			let vh = window.innerHeight * 0.01;
+			// Then we set the value in the --vh custom property to the root of the document
+			document.documentElement.style.setProperty('--vh', `${vh}px`);
+
+			// We listen to the resize event
+			window.addEventListener('resize', () => {
+				// We execute the same script as before
+				let vh = window.innerHeight * 0.01;
+				document.documentElement.style.setProperty('--vh', `${vh}px`);
+			}, { passive: true });
 		//- meta(name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no")
 		link(type="image/ico" href='img/favicon.ico' rel='shortcut icon') 
 		<meta name="format-detection" content="telephone=no">
