edit sWatchSports22 section

--- a/sourse/pug/blocks/sWatchSports/_sWatchSports.pug
+++ b/sourse/pug/blocks/sWatchSports/_sWatchSports.pug
@@ -4,8 +4,8 @@ mixin sWatchSports(i, b)
 		picture.picture-bg
 			source(type='image/webp' srcset='img/@2x/webp/watch-bg-lg.webp' media='(min-width:992px)')
 			source(type='image/webp' srcset='img/@2x/webp/watch-bg-sm.webp')
-			source(type='image/jpg' srcset='img/@2x/watch-bg-lg.png' media='(min-width:992px)')
-			source(type='image/jpg' srcset='img/@2x/watch-bg-sm.png')
+			source(type='image/png' srcset='img/@2x/watch-bg-lg.png' media='(min-width:992px)')
+			source(type='image/png' srcset='img/@2x/watch-bg-sm.png')
 			img.object-fit-js(src='img/@2x/watch-bg-lg.png' alt='' loading='lazy')
 		+e.logo
 			img(src="img/svg/logo.svg", alt="")
