--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -100,5 +100,6 @@ $output-bourbon-deprecation-warnings: false;
 @import "root";
 @import "base";
 @import '../pug/blocks/sWatchSports/sWatchSports.scss';
+@import '../pug/blocks/sWatchSports22/sWatchSports22.scss';
 @import "media"; // Всегда в конце
 
