--- a/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
+++ b/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
@@ -58,6 +58,7 @@
 		position: relative;
 		display: inline-block;
 		margin-bottom: 4vh;
+		margin-top: -3vh;
 		.text-img {
 			position: relative;
 			height: auto;
