--- a/sourse/pug/pages/index-22Bet.pug
+++ b/sourse/pug/pages/index-22Bet.pug
@@ -9,7 +9,7 @@ block variables
 	- let  bg= null
 
 block title
-	- let  title= 'Watch sports online'
+	- let  title= '22bet - watch sports online'
 	title= title
 block pagecontent
 	+sWatchSports22(`eng`, `registration`)
