--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -9,7 +9,7 @@ block variables
 	- let  bg= null
 
 block title
-	- let  title= 'Смотри спорт онлайн'
+	- let  title= '1xBet - Смотри спорт онлайн'
 	title= title
 block pagecontent
 	+sWatchSports(`ru`, `Регистрация`)
