--- a/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
+++ b/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
@@ -57,7 +57,7 @@
 	&__wrap {
 		position: relative;
 		display: inline-block;
-		margin-bottom: 4vh;
+		margin-bottom: 5vh;
 		margin-top: -3vh;
 		.text-img {
 			position: relative;
@@ -75,7 +75,7 @@
 			// 	max-width: rem(750);
 			// }
 			@include media-breakpoint-up(xxl) {
-				// margin-bottom: 5vh;
+				// margin-bottom: 4vh;
 				max-width: rem(661);
 			}
 		}
@@ -93,11 +93,11 @@
 		align-items: center;
 		max-width: 100%;
 		margin-top: var(--bs-gutter-y);
-		@include media-breakpoint-up(xl) {
-			flex-direction: column;
-			justify-content: space-around;
-			width: rem(230);
-		}
+		// @include media-breakpoint-up(xl) {
+		// 	flex-direction: column;
+		// 	justify-content: space-around;
+		// 	width: rem(230);
+		// }
 		.sWatchSports22__img-wrap {
 			min-width: rem(73);
 			text-align: center;
@@ -132,13 +132,11 @@
 			padding-left: rem(48);
 			@include media-breakpoint-up(md) {
 				// padding-left: rem(49);
-				padding-left: rem(45);
+				padding-left: rem(35);
 				font-size: rem(32);
 			}
 			@include media-breakpoint-up(xl) {
-				text-align: center;
-				padding-left: 0;
-				padding-top: rem(23);
+				padding-left: 30px;
 			}
 			@include media-breakpoint-up(xxl) {
 				font-size: rem(34);
@@ -161,12 +159,12 @@
 			// --bs-gutter-y: #{rem(45)};
 		}
 		@include media-breakpoint-up(xl) {
-			max-width: 900px;
+			max-width: 1100px;
 			flex-direction: row;
 			justify-content: space-between;
 		}
 		@include media-breakpoint-up(xxl) {
-			max-width: 1100px;
+			max-width: 1280px;
 		}
 	}
 	&__btn {
