--- a/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
+++ b/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
@@ -33,10 +33,6 @@
 	&__logo {
 		text-align: center;
 		margin-bottom: 3vh;
-		@include media-breakpoint-up(md) {
-		}
-		@include media-breakpoint-up(xl) {
-		}
 
 		img {
 			height: auto;
@@ -45,7 +41,10 @@
 			@include media-breakpoint-up(md) {
 				width: rem(180);
 			}
-			@include media-breakpoint-up(xl) {
+			@include media-breakpoint-only(xl) {
+				width: rem(170);
+			}
+			@include media-breakpoint-up(xxl) {
 				width: rem(200);
 			}
 		}
@@ -74,6 +73,9 @@
 			// 	// margin-bottom: rem(86);
 			// 	max-width: rem(750);
 			// }
+			@include media-breakpoint-only(xl) {
+				max-width: rem(460);
+			}
 			@include media-breakpoint-up(xxl) {
 				// margin-bottom: 4vh;
 				max-width: rem(661);
@@ -104,6 +106,9 @@
 			@include media-breakpoint-up(sm) {
 				min-width: rem(103);
 			}
+			@include media-breakpoint-only(xl) {
+				min-width: rem(72);
+			}
 			// @include media-breakpoint-up(xl) {
 			// 	text-align: right;
 			// }
@@ -115,6 +120,10 @@
 				@include media-breakpoint-up(md) {
 					max-width: rem(83);
 					max-height: rem(83);
+				}
+				@include media-breakpoint-only(xl) {
+					max-width: rem(72);
+					max-height: rem(72);
 				}
 				@include media-breakpoint-up(xxl) {
 					max-width: rem(94);
@@ -137,6 +146,7 @@
 			}
 			@include media-breakpoint-up(xl) {
 				padding-left: 30px;
+				font-size: rem(28);
 			}
 			@include media-breakpoint-up(xxl) {
 				font-size: rem(34);
@@ -159,7 +169,7 @@
 			// --bs-gutter-y: #{rem(45)};
 		}
 		@include media-breakpoint-up(xl) {
-			max-width: 1100px;
+			max-width: 940px;
 			flex-direction: row;
 			justify-content: space-between;
 		}
@@ -181,6 +191,10 @@
 		@include media-breakpoint-up(md) {
 			max-width: rem(534);
 			padding: rem(23.5);
+		}
+		@include media-breakpoint-only(xl) {
+			max-width: rem(454);
+			padding: rem(20);
 		}
 		@include media-breakpoint-up(xxl) {
 			max-width: rem(568);
@@ -206,6 +220,9 @@
 				// padding: rem(15);
 				// font-size: rem(30);
 				// line-height: calc(35 / 30);
+			}
+			@include media-breakpoint-only(xl) {
+				font-size: rem(32);
 			}
 			@include media-breakpoint-up(xxl) {
 				// padding: rem(19.5);
