--- a/sourse/pug/blocks/sWatchSports22/_sWatchSports22.pug
+++ b/sourse/pug/blocks/sWatchSports22/_sWatchSports22.pug
@@ -16,7 +16,7 @@ mixin sWatchSports22(i, b)
 					img.text-img(src=`img/@2x/sWatchSports22-${i}.png`, alt="")
 				img.bg(src=`img/svg/Ellipse.svg`, alt="")
 			block
-		+e.btn(href="https://refpa.top/L?tag=d_514359m_97c_watch_stream&site=514359&ad=97&r=registration/")
+		+e.btn(href="https://refpasrasw.world/L?tag=d_398229m_7669c_&site=398229&ad=7669&r=registration")
 			span!= b
 	// end sWatchSports22
 
