--- a/sourse/pug/pages/index-22BetEng.pug
+++ b/sourse/pug/pages/index-22BetEng.pug
@@ -13,7 +13,7 @@ block title
 	title= title
 block pagecontent
 	+sWatchSports22Alt(`eng`, `registration`)
-		+e.advantages.d-md-none.d-xl-flex
+		+e.advantages
 				mixin item(i, t)
 						+e.item
 							+e.img-wrap
