--- a/sourse/pug/blocks/sWatchSports22/_sWatchSports22.pug
+++ b/sourse/pug/blocks/sWatchSports22/_sWatchSports22.pug
@@ -34,11 +34,11 @@ mixin sWatchSports22Alt(i, b)
 		+e.main
 			+e.wrap
 				.row.align-items-center.justify-content-between
-					.col-xl
+					.col-xl-auto
 						img(src=`img/svg/sWatchLive-${i}.svg`, alt="")
 					.col-xl-auto
 						p And <br> get
-					.col-xl
+					.col-xl-auto
 						img(src=`img/svg/freebets-${i}.svg`, alt="")
 			block
 		+e.btn(href="https://stv.one/22bet_streaming")
