--- a/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
+++ b/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
@@ -11,8 +11,8 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	padding-left: rem(40);
-	padding-right: rem(40);
+	padding-left: rem(70);
+	padding-right: rem(70);
 	font-family: "TTSquaresCondensed";
 	@include media-breakpoint-up(md) {
 		// padding-left: rem(41);
@@ -138,7 +138,8 @@
 			line-height: calc(44 / 34);
 			text-align: left;
 			text-transform: uppercase;
-			padding-left: rem(48);
+			// @include media-breakpoint-down(md)
+			padding-left: rem(30);
 			@include media-breakpoint-up(md) {
 				// padding-left: rem(49);
 				padding-left: rem(35);
@@ -256,7 +257,7 @@
 			margin-right: auto;
 			text-align: center;
 			@include media-breakpoint-up(xl) {
-				max-width: 90%;
+				max-width: rem(1200);
 			}
 			img {
 				max-width: 100%;
@@ -298,18 +299,19 @@
 			}
 
 			.text-white {
-				font-weight: bold;
+				font-weight: 900;
 				font-style: normal;
 				@include media-breakpoint-up(xl) {
 					margin-top: rem(25);
 					padding-left: 0;
 					text-align: center;
+					font-size: rem(27);
 				}
 				@include media-breakpoint-down(lg) {
 					font-size: rem(28);
 				}
 				@include media-breakpoint-down(md) {
-					font-size: rem(26);
+					font-size: rem(20);
 				}
 			}
 			.sWatchSports22__img-wrap {
