--- a/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
+++ b/sourse/pug/blocks/sWatchSports22/_sWatchSports22.scss
@@ -260,7 +260,7 @@
 				max-width: rem(1200);
 			}
 			img {
-				max-width: 100%;
+				max-width: 512px;
 			}
 			.row {
 				--bs-gutter-y: #{rem(20)};
