--- a/sourse/pug/pages/index-22BetEng.pug
+++ b/sourse/pug/pages/index-22BetEng.pug
@@ -10,7 +10,7 @@ block variables
 
 block title
 	-
-		const lang= de
+		const lang= eng
 		const title= lang.title
 	title= title
 block pagecontent
