--- a/sourse/pug/blocks/sWatchSports22/_sWatchSports22.pug
+++ b/sourse/pug/blocks/sWatchSports22/_sWatchSports22.pug
@@ -33,12 +33,12 @@ mixin sWatchSports22Alt(i, b, and)
 			img(src="img/@2x/logo-22.png", alt="")
 		+e.main
 			+e.wrap
-				.row.align-items-center.justify-content-between
-					.col-xl-auto
+				.row.align-items-center.justify-content-center
+					.col-xl
 						img(src=`img/svg/sWatchLive-${i}.svg`, alt="")
 					.col-xl-auto
 						p!= and
-					.col-xl-auto
+					.col-xl
 						img(src=`img/svg/freebets-${i}.svg`, alt="")
 			block
 		+e.btn(href="https://stv.one/22bet_streaming")
