--- a/sourse/pug/pages/22bet_streaming_ng.pug
+++ b/sourse/pug/pages/22bet_streaming_ng.pug
@@ -10,7 +10,7 @@ block variables
 
 block title
 	-
-		const lang= ng
+		const lang= eng
 		const title= lang.title
 	title= title
 block pagecontent
