--- a/sourse/pug/pages/22bet_streaming_de.pug
+++ b/sourse/pug/pages/22bet_streaming_de.pug
@@ -10,7 +10,7 @@ block variables
 
 block title
 	-
-		const lang= no
+		const lang= de
 		const title= lang.title
 	title= title
 block pagecontent
