--- a/sourse/pug/pages/22bet_streaming_pt.pug
+++ b/sourse/pug/pages/22bet_streaming_pt.pug
@@ -14,7 +14,7 @@ block title
 		const title= lang.title
 	title= title
 block pagecontent
-	+sWatchSports22Alt(lang.name, lang.btnText, lang.and)
+	+sWatchSports22Alt(lang.name, lang.btnText, lang.and, lang.name)
 		+e.advantages
 				each item, index in lang.items
 						+e.item
